--- a/index.html
+++ b/index.html
@@ -40,6 +40,48 @@
     </div>
   </div>
 
+  
+  <!-- Genes asociados con la obesidad
+
+<section class="fdb-block">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-12 col-md-6 mb-4 mb-md-0">
+        <img alt="image" class="img-fluid" src="./imgs/draws/smile.svg">
+      </div>
+      <div class="col-12 col-md-6 col-lg-5 ml-md-auto text-left">
+        <h1>Froala Blocks</h1>
+        <p class="lead"> Estamos perdidas, ¡perdidaaaaaaaa!</p>
+        <p><a class="btn btn-secondary mt-4" href="https://www.froala.com">Download</a></p>
+      </div>
+    </div>
+  </div>
+</section>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
